# skyflo

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TRADEMARKS.md
.github/workflows/: ci.yml  deployment-ci.yml  publish-images.yml
charts/skyflo/: values.yaml
charts/skyflo/templates/: NOTES.txt  _helpers.tpl  engine-secrets.yaml  pdb-controller.yaml  pdb-engine.yaml  pdb-mcp.yaml  pdb-ui.yaml  ui-ingress.yaml
deployment/: README.md  install.sh  install.yaml  local.docker-compose.yaml  local.install.yaml  uninstall.sh
deployment/config/: engine-configmap.yaml  mcp-configmap.yaml  ui-configmap.yaml
deployment/engine/: Dockerfile  entrypoint.sh
deployment/helm/skyflo/: .helmignore  Chart.yaml  values.yaml
deployment/helm/skyflo/templates/: NOTES.txt  _helpers.tpl
deployment/helm/skyflo/templates/cluster/: crd.yaml  rbac.yaml
deployment/helm/skyflo/templates/config/configmaps/: engine-configmap.yaml  mcp-configmap.yaml  ui-configmap.yaml  version-configmap.yaml
deployment/helm/skyflo/templates/config/secrets/: engine-secrets.yaml  postgres-secrets.yaml
deployment/helm/skyflo/templates/ingress/: ui-ingress.yaml
deployment/helm/skyflo/templates/network/service/: engine.yaml  mcp.yaml  postgres-headless.yaml  postgres.yaml  redis-headless.yaml  redis.yaml  ui.yaml
deployment/helm/skyflo/templates/workload/: controller.yaml  engine.yaml  mcp.yaml  postgres.yaml  redis.yaml  ui.yaml
deployment/kubernetes/: kustomization.yaml
deployment/kubernetes-controller/: Dockerfile
deployment/kubernetes/cluster/: crd.yaml  namespace.yaml  rbac.yaml
deployment/kubernetes/config/configmaps/: engine-configmap.yaml  mcp-configmap.yaml  ui-configmap.yaml  version-configmap.yaml
deployment/kubernetes/config/secrets/: engine-secrets.yaml  postgres-secrets.yaml
deployment/kubernetes/network/service/: engine.yaml  postgres-headless.yaml  postgres.yaml  redis-headless.yaml  redis.yaml  ui.yaml
deployment/kubernetes/workload/: controller.yaml  engine.yaml  postgres.yaml  redis.yaml  ui.yaml
deployment/mcp/: Dockerfile
deployment/ui/: Dockerfile  nginx.conf
docs/: deployment-helm.md  deployment-kubernetes.md  deployment.md  install.md
engine/: .env.example  README.md  pyproject.toml
engine/migrations/models/: 2_20260131205817_add_refresh_tokens.py
engine/src/api/: asgi.py
engine/src/api/agent/: graph.py  model_node.py  prompts.py  state.py  stop.py
engine/src/api/config/: __init__.py  database.py  rate_limit.py  settings.py
engine/src/api/endpoints/: __init__.py  agent.py  auth.py  conversation.py  health.py  integrations.py  team.py
engine/src/api/integrations/jenkins/: jenkins.py
engine/src/api/middleware/: __init__.py  logging_middleware.py
engine/src/api/models/: __init__.py  conversation.py  refresh_token.py  user.py
engine/src/api/schemas/: team.py
engine/src/api/services/: approvals.py  auth.py  checkpointer.py  conversation_persistence.py  integrations.py  mcp_client.py  title_generator.py  tool_executor.py  tools_cache.py
engine/src/api/utils/: clock.py  helpers.py
mcp/: README.md  fastmcp.json  main.py  pyproject.toml
mcp/config/: server.py
mcp/tests/tools/: test_argo.py  test_helm.py  test_jenkins.py  test_kubectl.py
mcp/tests/utils/: test_commands.py
mcp/tools/: argo.py  helm.py  jenkins.py  kubectl.py
mcp/utils/: commands.py  models.py
ui/: .eslintrc.json  README.md
ui/src/app/api/auth/logout/: route.ts
ui/src/app/api/auth/refresh/: route.ts
ui/src/components/: History.tsx  Integrations.tsx
ui/src/components/auth/: AuthProvider.tsx  Login.tsx  Register.tsx
ui/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  PendingApprovalsBar.tsx  Welcome.tsx
ui/src/components/navbar/: Navbar.tsx
ui/src/components/settings/: ProfileSettings.tsx  Settings.tsx
ui/src/components/ui/: markdown-components.tsx
ui/src/lib/: auth.ts  utils.ts
ui/src/lib/auth/: constants.ts
ui/src/store/: useAuthStore.ts
ui/src/types/: chat.ts
