[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyflo-mcp"
dynamic = ["version"]
description = 'Skyflo.ai MCP Server - Cloud Native Tools for AI Agents'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["mcp", "ai", "cloud native", "kubernetes", "helm", "argo", "kubectl"]
authors = [
    { name = "Karan Jagtiani", email = "karan@skyflo.ai" },
]

dependencies = [
    "mcp==1.26.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "fastmcp==3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff==0.15.2",
]

[project.scripts]
skyflo-mcp = "main:main"

[project.urls]
Documentation = "https://github.com/skyflo-ai/skyflo#readme"
Issues = "https://github.com/skyflo-ai/skyflo/issues"
Source = "https://github.com/skyflo-ai/skyflo"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true  # FastMCP decorator type stubs don't match usage patterns

[tool.coverage.run]
source = ["."]
branch = true
parallel = true
omit = [
    "__about__.py",
    "tests/*",
]

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = [
    "B008",  # Do not perform function call in argument defaults - standard FastMCP pattern with Field()
]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E501"]  # Allow long lines in tool descriptions
"tests/*.py" = ["E501"]  # Allow long lines in test assertions
"tests/**/*.py" = ["E501"]  # Allow long lines in test assertions
